--- a/public/style.css
+++ b/public/style.css
@@ -96,3 +96,29 @@ h6 {
   height: 300px;
   width: 400px;
 }
+
+
+/* Welcome  */
+#welcomePage{
+  background-color: skyblue;
+  /* display: inline; */
+  position: relative;
+  top: 200px;
+  left: 400px;
+  height: 300px;
+  width: 600px;
+  padding-left: 50px;
+}
+
+#daffy{
+  position: relative;
+  left: 25%;
+  height: 200px;
+  width: 200px;
+}
+
+/* Button */
+#removeBtn{
+  width: 126px;
+  height: 30px;
+}
